updated docs + README
